# uzinagaz

./: .gitignore  CLAUDE.md  PROGRESS.md  QUICKSTART.md  README.md  STORAGE_SETUP.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude/agents/: agent-manager.md  bug-hunter.md  code-reviewer.md  dependency-analyzer.md  doc-writer.md  error-resolver.md  git-assistant.md  performance-optimizer.md  refactoring-assistant.md  test-writer.md  typescript-fixer.md
.claude/commands/: erreur.md  memorise.md  recap.md  save.md
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.prebuilt  fix_timestamps.sql  reset_db.py  reset_db.sh
backend/src/: config.rs  main.rs
backend/src/db/: connection.rs
backend/src/db/migrations/: 001_users.sql  002_consoles_games.sql  003_achievements.sql  003_save_states.sql  004_achievements.sql  004_saves_stats.sql
backend/src/handlers/: auth.rs  games.rs  mod.rs  saves.rs
backend/src/middleware/: auth.rs
backend/src/models/: achievement.rs  game.rs  mod.rs  save_state.rs  settings.rs  stats.rs  user.rs
backend/src/services/: auth_service.rs  game_service.rs  mod.rs  save_service.rs
backend/src/utils/: errors.rs
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: games.json
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts  authService.ts  gameService.ts  saveService.ts
frontend/src/stores/: authStore.ts  desktopStore.ts  gameStore.ts  (+2 more)
memory/: context.md  corrections.md  personality.md  sessions.md
storage/: README.md
(+32 files in other folders)
